# slide-generator

./: Dockerfile  Makefile  entrypoint.sh  pyproject.toml
samples/markdown/: test.md
src/: generate_markdown.py
theme/: base.css  tohoku-nlp-group.css
